this should fix the min-height problem, where the menu overlaps the main content box. it's done by adding a footer without content; with the same bg color as the main content. also it's not floating so its always the last element and under the content. now: when the menu is longer as min-height of main, then there will be a gap, between main and the footer. to hide the gap the background color of wrapper needs to be the one of main.

--- a/webskins/znc-ation/pub/css/znc-ation.css
+++ b/webskins/znc-ation/pub/css/znc-ation.css
@@ -31,6 +31,7 @@ a:hover {color: red}  /* mouse over link */
 	-webkit-box-shadow: 1px 1px 2px #ccc;
 	-moz-box-shadow: 1px 1px 2px #ccc;
 	box-shadow: 1px 1px 2px #ccc;
+	background-color: #F8F8F8; /* just in case, this colors the gap between main min-height and the footer */
 }
 
 .errorbar {
@@ -51,6 +52,13 @@ a:hover {color: red}  /* mouse over link */
 	background-color: #F8F8F8;
 	padding: 20px;
 	min-height: 450px;
+}
+
+footer {
+	min-height: 100%;
+	height: auto;
+	clear: both; /* stop the footer from floating. it will be under all the content. */
+	background-color: #F8F8F8; /* same bgcolor as main */
 }
 
 aside {
